# NotePages

./: .gitignore  CMakeLists.txt  LICENSE  README.md  apple.cmake  desktopWiki.pro  desktopWiki.qrc  installers.cmake  linux.cmake  mainwindow.cpp  mainwindow.h  mainwindow.ui  note.cpp  note.h  notePages.qrc  notePages.rc  page.cpp  page.h  pagescene.cpp  settings.cpp  settingsui.cpp  settingsui.h  windows.cmake
cmake/modules/: DocbookGen.cmake  Doxyfile.in  MacOSXBundleInfo.plist.in  NSIS.template.in  version.cpp.in
docs/: CMakeLists.txt  apple.cmake  homepage.html  index.docbook.in  linux.cmake  notePages.xsl.in  windows.cmake
docs/images/: cover.svgz
images/: Note Pages.icns  add_document.svgz  add_image.svgz  add_text.svgz  connection_line.svgz  desktopWiki.icns  dmg_background.svgz  edit_copy.svgz  edit_create_symbolic_link.svgz  edit_cut.svgz  edit_paste.svgz  installer.xcf
resources/: MacDmgDsStore  NotePages.desktop
src/: CMakeLists.txt  appinfo.cpp  appinfo.h  apple.cmake  arrow.cpp  arrow.h  debug.h  errorhandler.h  history.cpp  history.h  linkdialog.cpp  linkdialog.h  linkdialog.ui  linux.cmake  macmenubar.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  note.cpp  note.h  noteattachment.cpp  noteattachment.h  notecontainer.cpp  notecontainer.h  notecontent.cpp  notecontent.h  notedocument.cpp  notedocument.h  notehandler.cpp  notehandler.h  noteimage.cpp  noteimage.h  noteoptions.cpp  noteoptions.h  notetext.cpp  notetext.h  page.cpp  page.h  page.ui  (+18 more)
src/orig/: page.cpp  page.h
tests/: CMakeLists.txt  main.cpp
